# jeanne

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: config.rs  main.rs  qbittorrent.rs
