[package]
name = "jeanne"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
simple_logger = "5"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "default-tls"] }

[dev-dependencies]
serde_test = "1.0"
test-case = "*"
